test/files/neg/t5334_1.check
t5334_1.scala:5: error: implementation restriction: cannot reify block of type C that involves a type declared inside the block being reified. consider casting the return value to a suitable type
  reify {
        ^
one error found
